--- a/web/themes/crane/scss/components/_modals.scss
+++ b/web/themes/crane/scss/components/_modals.scss
@@ -6,10 +6,15 @@
 ----------------- */
 .ui-dialog.entity-browser-modal{
   max-width: 1200px;
+  .entity-browser-iframe-container{
+		width: 100% !important;
+	}
 }//end entity browser modal
 .entity-browser-form{
 	font-size: $baseSize;
 	margin-top: -$spaceMd;
+	padding-bottom: 100px;
+	overflow-y: scroll;
 	& > .form-actions{
 		position: fixed;
 		bottom: 0;
@@ -20,6 +25,9 @@
 		border-top: 1px solid $borderRule;
 		padding-top: 1em;
 		margin: 0;
+		input[type="submit"]{
+			margin-bottom: 0;
+		}
 	}
 	.eb-tabs{
 		ul{
@@ -60,6 +68,24 @@
 			}//end li
 		}//end ul
 	}//end entity browser tabs
+	.select2-container--default{
+		width: 100% !important;
+		max-width: 300px;
+
+		.select2-selection--single,.select2-selection--multiple{
+			min-height: 38px;
+			.select2-search__field{
+				width: 100% !important;
+			}
+			.select2-selection__choice{
+				padding: 3px 5px;
+			}
+		}
+	}
+	#edit-inline-entity-form-field-media-categories--description{
+		margin-top: $spaceXs;
+		line-height: 1.4;
+	}
 }//end eb modal form
 
 /* ENTITY BROWSER MEDIA VIEW CONTENT
