--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -17,6 +17,7 @@ $fuchsia      : #c41294;
 $purple       : #8b01e2;
 $green        : #018901;
 $gold         : #fcd105;
+$whiteGold    : #fbf9db;
 $blueGrey     : #dce7f3;
 $blue         : #026cc5;
 $midBlue      : #1d5a9f;
@@ -91,4 +92,4 @@ $oddRowBack          : $siteBack;
 $oddRowText          : $black;
 $evenRowBack         : $siteBack;
 $evenRowText         : $black;
-$rowSelectedBack     : $iceBlue;
+$rowSelectedBack     : $whiteGold;
